--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  web_socket_channel: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
