--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+     - images/108.png
+     - images/sign_in.jpg
+     - images/sign_up.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
