--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,12 @@ dependencies:
 
   web_socket_channel: ^1.1.0
 
+  event_bus: ^1.1.0
+
+  shared_preferences: ^0.5.6
+
+  provider: ^4.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
