网络请求及错误处理,api 请求方式 -- 注意 future 对象的异步以及 override 方法的不可更改属性--同步的依旧是同步,异步的依旧是异步!!!--flutter 两个重要对象 Future 和 Stream !!!

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
 
   provider: ^4.0.1
 
+  dio: ^3.0.0 # 网络请求
+
+  sprintf: ^4.0.2
+
+  # rxdart: ^0.23.1 # 此包的状态管理功能被 flutter 原生代替
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
