--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  sqflite:
+  path:
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -36,7 +39,7 @@ dependencies:
 
   sprintf: ^4.0.2
 
-  crypto: ^2.1.4
+  crypto: ^2.1.3
 
   # rxdart: ^0.23.1 # 此包的状态管理功能被 flutter 原生代替
 
