--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,15 @@ dependencies:
 
   crypto: ^2.1.3
 
+  flutter_staggered_grid_view:
+    git:
+      url: git://github.com/CNballoon/flutter_staggered_grid_view.git
+      ref: master
+  
+  cached_network_image: ^2.0.0 # 缓存图片
+
+  flutter_screenutil: ^1.0.2 # 屏幕尺寸工具插件
+
   # rxdart: ^0.23.1 # 此包的状态管理功能被 flutter 原生代替
 
 dev_dependencies:
