提供七牛云发送聊天图片支持.后面需要每次进入app 拉取历史消息的功能.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
 
   flutter_screenutil: ^1.0.2 # 屏幕尺寸工具插件
 
+  image_picker: ^0.6.3+1
+
   # rxdart: ^0.23.1 # 此包的状态管理功能被 flutter 原生代替
 
 dev_dependencies:
