--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="chat"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/soul">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -27,4 +27,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
+    <uses-permission android:name="android.permission.INSTALL_PACKAGES"></uses-permission>
 </manifest>
